Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24586

Items may be animated by a displace-type view transition even if they haven't changed position

XMLWordPrintable

    • 52d3d361a0db4b0cfdf795b7998733f61ca3082d

      This occurs when a displaced item hasn't finished its current transition, and another move operation earlier in the view triggers a model change that triggers another displaced animation since the transition hasn't quite finished (e.g. due to a subtle bounce-type animation that hasn't completed).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bealam Bea Lam (closed Nokia identity) (Inactive)
            bealam Bea Lam (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes